--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ build/
 # Dependency directories
 node_modules/
 jspm_packages/
+public/css/application.css
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
