--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "start:dev": "concurrently \"npm run sass:compile\" \"cross-env NODE_ENV=local npx nodemon --config tools/nodemon.json\"",
     "start": "npm run build && node -r tsconfig-paths/register ./build/index.js",
     "copy-files": "cp -r ./src/views ./build",
-    "build": "rimraf ./build && tsc && npm run copy-files",
+    "build": "rimraf ./build && npm run sass:compile:build && tsc && npm run copy-files",
     "json-server": "json-server ./src/services/mock-data.json --port 3300",
     "lint": "eslint ./src/**/*.{js,ts}",
     "lint:fix": "npm run lint --fix",
     "lint:rules": "eslint --print-config rules > eslint-rules.json",
     "sass:compile": "sass --watch --no-source-map --load-path=node_modules/govuk-frontend/dist/ --quiet-deps src/assets/sass/_root.scss public/css/application.css",
+    "sass:compile:build": "sass --no-source-map --load-path=node_modules/govuk-frontend/dist/ --quiet-deps src/assets/sass/_root.scss public/css/application.css",
     "format:check": "prettier --ignore-path .gitignore --check \"./src/**/*.+(js|ts|jsx|tsx)\"",
     "test": "jest --watchAll -u",
     "test:ci": "jest --coverage -u",
