--- a/package.json
+++ b/package.json
@@ -93,6 +93,8 @@
     "marked": "^9.1.6",
     "nunjucks": "3.2.4",
     "nunjucks-date-filter": "0.1.1",
+    "posthog-js": "^1.318.1",
+    "posthog-node": "^5.20.0",
     "rss-parser": "^3.13.0",
     "semantic-release": "^22.0.12",
     "ts-node": "10.9.2",
